[package]
name = "rust-randomx"
version = "0.7.3"
edition = "2021"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
description = "Rust interface to the RandomX hash function"
repository = "https://github.com/zeeka-network/rust-randomx"
homepage = "https://github.com/zeeka-network/rust-randomx"
license = "MIT"
keywords = ["RandomX", "PoW"]

[build-dependencies]
cmake = "0.1"

[dependencies]
